# tecday-rag-app

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_notebook.ipynb  test_script.py  utils.py
.devcontainer/: devcontainer.json
.solutions/: utils.py
notebooks/: Embeddings.ipynb  Evaluation.ipynb  Generation.ipynb  Illustrate_Embedding.ipynb  Illustrate_Evaluation_Generation.ipynb  Illustrate_Evaluation_Retrieval.ipynb  Illustrate_GenerationLLM.ipynb  Illustrate_Ingest.ipynb  Ilustrate_VLM.ipynb
solutions/: Bonus_Illustrate_Ingest.ipynb  Illustrate_Embedding.ipynb  Illustrate_GenerationLLM.ipynb  Ilustrate_VLM.ipynb  app.py  frontend.py  rag.py
src/rag_llm_applications/: __init__.py  app.py  chat.py  create_collection.py  embed.py  frontend.py  ingest.py  model.py  qdrant.py  rag.py  util.py  version.py
