[project]
name = "rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.0.1",
    "ipywidgets>=8.1.7",
    "langchain>=1.0.1",
    "langchain-community>=0.4",
    "langchain-openai>=1.0.0",
    "langchain-qdrant>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "matplotlib>=3.10.7",
    "pypdf>=6.1.2",
    "python-dotenv>=1.1.1",
    "qdrant-client>=1.15.1",
    "ragas>=0.3.7",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "streamlit>=1.50.0",
]

[dependency-groups]
dev = [
    "ipython>=9.6.0",
]
